# nonogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
hello/: CMakeLists.txt  hello.cpp
imgsolver/: CMakeLists.txt  DnnDetect.cpp  GridFinder.cpp  ImageDebug.cpp  InputImage.cpp  InputParser.cpp  TesseractDetect.cpp  main.cpp
include/: Constraint.h  Location.h  MainConstraint.h  Nonogram.h  Rule.h  Segment.h
include/imgsolver/: DnnDetect.h  GridFinder.h  ImageDebug.h  InputImage.h  NumDetector.h  TesseractDetect.h  constants.h
include/solvercore/: Constraint.h  Location.h  MainConstraint.h  Nonogram.h  NonogramInput.h  Observable.h  Observer.h  Rule.h  Segment.h  VarianceCalculator.h  constants.h
libsolvercore/: CMakeLists.txt
libsolvercore/classes/: Constraint.cpp  Location.cpp  MainConstraint.cpp  Nonogram.cpp  Rule.cpp  Segment.cpp  VarianceCalculator.cpp
libsolvercore/include/: Constraint.h  Location.h  MainConstraint.h  Nonogram.h  Rule.h  Segment.h  VarianceCalculator.h  constants.h
libsolvercore/test/: test_nonogram.cpp
models/tensorflow/: nono-model-graph.pb
puzzles/: 45_45_large.txt  QR-code.txt  alan_turing.txt  cat-1_45_32.txt  rabit.txt  small.txt  test_wrong.txt
qt-gui/: CMakeLists.txt  Location_observer.cpp  Location_observer.h  NonogramQt.cpp  NonogramQt.h  main.cpp
solver/: CMakeLists.txt  main.cpp
solvercore/: CMakeLists.txt
solvercore/classes/: Constraint.cpp  Location.cpp  MainConstraint.cpp  Nonogram.cpp  NonogramInput.cpp  Observable.cpp  Rule.cpp  Segment.cpp
solvercore/test/: test_nonogram.cpp
test_imgsolver/: CMakeLists.txt  test_imgsolver.cpp
tools/: process_dir.sh  update-solve-with-rules.sh
train/keras/: .gitignore  Dockerfile  convert.py  go.sh  predict.py  predict_open_cv.py  publish_model.sh  train_model.py
